# open-model-benchmark-api

./: .env.example  .gitignore  ACTION_README.md  Dockerfile  MONETIZATION.md  OVERVIEW.md  README.md  action-entrypoint.sh  action.yml  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: benchmark-example.yml  publish-action.yml  test-action.yml
alembic/: env.py
app/: __init__.py  auth.py  celery_app.py  config.py  main.py  models.py  schemas.py  tasks.py
app/routers/: auth.py  benchmark.py  leaderboard.py  payments.py  webhooks.py
tests/: test_benchmark.py
