[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-model-benchmark-api"
version = "0.1.0"
description = "REST API that benchmarks open-weight AI models against proprietary ones on real-world coding tasks"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"}
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    "httpx>=0.26.0",
    "redis>=5.0.1",
    "celery>=5.3.4",
    "stripe>=8.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "black>=24.1.0",
    "ruff>=0.1.14",
]

[tool.hatchling.build.targets.wheel]
packages = ["app"]
